@@ -5,7 +5,6 @@ license = BSD
 copyright_holder = Timm Murray
 
 [GatherDir]
-[ShareDir]
 [Manifest]
 [MakeMaker]
 
